[package]
name = "datafushion_exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
datafusion = "33.0.0"
log = "0.4.20"
pretty_env_logger = "0.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
